Revision history for {{$dist->name}}

{{$NEXT}}
  - install Clustericious + PlugAuth on MSWin32 (now that it is supported)

0.37      2013-05-30 14:36:57 America/New_York
  - rm HTML::Barcode::QRCode
  - added PlugAuth and family

0.36      2013-05-30 14:22:04 America/New_York
  - added Yars
  - added PlugAuth::Client::Tiny
  - added PlugAuth::Lite
  - added Authen::Simple::PlugAuth

0.35      2013-01-27 21:04:21 America/New_York
  - added File::Listing
  - added File::Listing::Ftpcopy
  - added AnyEvent::Finger
  - added HTML::Barcode::QRCode

0.34      2013-01-18 18:24:49 America/New_York
  - rm Mojolicious::Plugin::Gravatar

0.33      2013-01-18 18:16:19 America/New_York
  - added local::lib
  - added Mojolicious::Plugin::Gravatar

0.32      2013-01-15 16:11:32 America/New_York
  - added AnyEvent::Ident

0.31      2012-12-26 14:57:57 America/New_York
  - test all requird modules
  - fix bug where MSWin32 and cygwin not required modules were being excluded

0.30      2012-12-26 14:23:04 America/New_York
  - migration to requirements specified in dist.ini instead of Plicease.pm

0.28      2012-12-26 11:41:59 America/New_York
  - added Template::Tiny
  - added Try::Tiny
  - added HTTP::Tiny
  - added TinyMake
  - added Validate::Tiny
  - added Mojolicious::Plugin::RenderFile
  - added Mojo::JSON::Any
  - added Sereal::Encoder (except for $^O eq 'MSWin32')
  - added Sereal::Decoder

0.28      2012-11-06 10:43:47 EST5EDT
  - added Module::CoreList
  - added Pod::Perldoc
  - added File::IgnoreReadonly
  - added Authen::Simple
  - added Crypt::PasswdMD5
  - added use File::Touch

0.27      2012-11-02 13:59:14 America/New_York
  - sort modules in doco case insensitive
  - added XML::Rabbit
  - added Role::Tiny
  - added Scalar::Does

0.26      2012-10-26 15:37:36 EST5EDT
  - added App::RegexFileUtils
  - added Shell::Config::Generate
  - added Shell::Guess
  - added WebService::TwitterBootstrap::Download::Custom
  - added Test::Differences
  - added DBD::PgPP