@@ -134,6 +134,7 @@ PlugAuth::Client                               = 0
 PlugAuth::Plugin::Audit                        = 0
 PlugAuth::Plugin::DBIAuth                      = 0
 PlugAuth::Plugin::LDAP                         = 0
+PlugAuth::Plugin::Finger                       = 0
 PlugAuth::Client::Tiny                         = 0
 PlugAuth::Lite                                 = 0
 
